根据原型图初次重构成基本满意的页面

--- a/docs/management/task/1.project-initialization.md
+++ b/docs/management/task/1.project-initialization.md
@@ -1,123 +1,515 @@
-# 任务：项目初始化
+# 任务：项目初始化与重构
 
 ## 任务信息
 
-- **任务名称**: 项目初始化 (Project Initialization)
-- **创建时间**: 2025-10-21
+- **任务名称**: 项目初始化与重构 (Project Initialization & Refactor)
+- **创建时间**: 2025-01-25
 - **优先级**: 高
-- **状态**: 未开始
+- **状态**: 进行中
 
 ## 任务描述
 
-建立卡片式笔记软件的基础开发框架，完成技术栈的配置与集成。这是 MVP 开发的第一阶段，需要搭建完整的开发环境，确保所有核心依赖正确安装并能协同工作。
+根据最新的原型图和产品需求文档，对现有项目进行全面重构。当前项目已有基础框架（Next.js 15 + TailwindCSS 4），但需要重新设计架构以匹配原型图的交互逻辑和视觉设计。
 
-**具体工作内容：**
+**核心变更：**
+1. **多页面架构**：从单页画布改为多页面应用（登录页 → 笔记架页 → 画布页）
+2. **笔记管理系统**：实现笔记架（书架）的网格布局、文件夹管理
+3. **视觉系统升级**：实现原型图的视觉规范（3D文件夹图标、渐变封面、毛玻璃卡片）
+4. **主题系统**：完善白天/黑夜模式切换
+5. **交互模式**：画布的选择、拖动、连线三种模式
 
-1. 初始化 Next.js 15 项目（使用 App Router）
-2. 配置 TailwindCSS，建立基础样式系统
-3. 集成 React Flow 画布库
-4. 集成 Tiptap 富文本编辑器
-5. 配置 localforage（IndexedDB 封装）用于数据持久化
-6. 搭建项目文件结构（按照 MVP 计划书规划）
-7. 配置开发环境（ESLint、TypeScript、环境变量等）
-8. 验证所有依赖正常工作
-
-**任务边界：**
-- 仅完成框架搭建和依赖配置，不涉及具体业务功能开发
-- 建立基础的项目结构，但各组件可以是空壳
-- 确保项目能够成功启动并运行
-
-**特殊要求：**
-- 使用 TypeScript 作为开发语言
-- 确保所有依赖版本兼容
-- 遵循 Next.js 15 App Router 最佳实践
-- 建立清晰的目录结构，便于后续开发
+**参考依据：**
+- `prototypes/notebook-shelf.html` - 笔记架页面设计
+- `prototypes/canvas.html` - 画布页面设计
+- `prototypes/login.html` - 登录页面设计
+- `docs/产品需求文档.md` - 功能需求文档
 
 ## TODO-LIST
 
-1. [ ] 创建 Next.js 15 项目（App Router 模式）
-   - 使用 `npx create-next-app@latest` 初始化
-   - 选择 TypeScript、ESLint、App Router 等配置
+### 阶段一：项目结构调整 (30分钟)
 
-2. [ ] 安装并配置 TailwindCSS
-   - 安装 tailwindcss、postcss、autoprefixer
-   - 配置 `tailwind.config.js`
-   - 在 `app/globals.css` 中引入 Tailwind 指令
+- [ ] **1.1 调整页面路由结构**
+  - 创建 `src/app/(auth)/login/page.tsx` - 登录页面
+  - 创建 `src/app/(main)/shelf/page.tsx` - 笔记架页面
+  - 创建 `src/app/(main)/canvas/[id]/page.tsx` - 动态画布页面
+  - 修改 `src/app/page.tsx` 为重定向到登录页或笔记架
+  - 创建 `src/app/(main)/layout.tsx` - 主布局（包含侧边栏）
 
-3. [ ] 安装核心依赖库
-   - React Flow: `npm install @xyflow/react`
-   - Tiptap: `npm install @tiptap/react @tiptap/starter-kit @tiptap/extension-image`
-   - localforage: `npm install localforage`
-   - Zustand (可选): `npm install zustand`
+- [ ] **1.2 调整组件目录结构**
+  - 移动 `Navbar.tsx` → `Sidebar.tsx`（改为侧边栏组件）
+  - 创建 `src/components/Shelf/` 目录：
+    - `NoteCard.tsx` - 笔记卡片组件
+    - `FolderCard.tsx` - 文件夹卡片组件
+    - `ShelfGrid.tsx` - 网格布局容器
+  - 创建 `src/components/Canvas/` 新组件：
+    - `CanvasToolbar.tsx` - 画布工具栏
+    - `ModeIndicator.tsx` - 模式指示器
+    - `CardEditModal.tsx` - 卡片编辑弹窗
+  - 创建 `src/components/UI/` 新组件：
+    - `ThemeToggle.tsx` - 主题切换按钮
+    - `SearchBar.tsx` - 搜索框
 
-4. [ ] 建立项目文件结构
-   - 创建 `src/` 目录
-   - 创建 `src/components/Canvas/` 目录及占位文件
-   - 创建 `src/components/Editor/` 目录及占位文件
-   - 创建 `src/components/UI/` 目录及占位文件
-   - 创建 `src/hooks/` 目录
-   - 创建 `src/lib/` 目录及 `constants.ts`、`storage.ts`
-   - 创建 `src/styles/theme.css` 文件
+- [ ] **1.3 创建数据模型**
+  - 创建 `src/types/` 目录
+  - `src/types/notebook.ts` - 笔记本数据类型
+  - `src/types/folder.ts` - 文件夹数据类型
+  - `src/types/card.ts` - 卡片数据类型
+  - `src/types/connection.ts` - 连线数据类型
 
-5. [ ] 配置基础样式系统
-   - 在 `src/lib/constants.ts` 中定义渐变色系配置
-   - 在 `src/styles/theme.css` 中定义毛玻璃效果、阴影等基础样式
-   - 配置 TailwindCSS 主题扩展（模糊效果、自定义颜色等）
+### 阶段二：视觉系统实现 (45分钟)
 
-6. [ ] 创建基础组件骨架
-   - `src/app/layout.tsx` - 全局布局
-   - `src/app/page.tsx` - 主画布页面（空壳）
-   - `src/components/Canvas/CanvasContainer.tsx` - 画布容器（空壳）
-   - `src/components/Canvas/CardNode.tsx` - 卡片节点（空壳）
+- [ ] **2.1 更新 constants.ts**
+  - 添加笔记封面渐变色配置（8-10种渐变）
+  - 添加文件夹3D图标配色
+  - 添加主题颜色变量（primary: #137fec）
+  - 添加画布配置（网格大小、背景色）
 
-7. [ ] 验证项目运行
-   - 执行 `npm run dev` 确保项目启动成功
-   - 访问 localhost:3000 验证页面正常显示
-   - 检查控制台无严重错误
+- [ ] **2.2 更新 theme.css**
+  - 定义 `.glass-card` 毛玻璃效果样式
+  - 定义 `.folder-icon-3d` 3D文件夹样式
+  - 定义 `.note-cover` 笔记封面样式
+  - 定义 `.shelf-divider` 分割线样式
+  - 定义 `.canvas-bg` 画布背景网格样式
+  - 定义悬停动画和过渡效果
 
-8. [ ] 配置开发工具
-   - 配置 TypeScript `tsconfig.json`（如需调整）
-   - 配置 ESLint 规则（如需自定义）
-   - 添加 `.gitignore` 确保排除 node_modules、.next 等
+- [ ] **2.3 配置 globals.css**
+  - 引入 Material Symbols Outlined 字体
+  - 引入 Inter 字体（已完成）
+  - 定义 CSS 变量用于主题切换
+  - 配置暗色模式变量
 
-9. [ ] 创建 README.md
-   - 说明项目技术栈
-   - 列出安装和启动步骤
-   - 说明项目结构
+- [ ] **2.4 更新 TailwindCSS 配置**
+  - 在 `globals.css` 中使用 `@theme` 定义自定义颜色
+  - 添加 `backdrop-blur` 工具类配置
+  - 配置 `darkMode: 'class'`
 
-10. [ ] 提交初始化代码
-    - Git 初始化（如未完成）
-    - 提交首次代码：`git commit -m "feat: 项目初始化完成"`
+### 阶段三：状态管理系统 (30分钟)
+
+- [ ] **3.1 创建 Zustand Store**
+  - `src/stores/useNotebookStore.ts` - 笔记本管理状态
+    - 笔记列表、文件夹列表
+    - 新建/删除/重命名笔记
+    - 新建/删除/重命名文件夹
+  - `src/stores/useCanvasStore.ts` - 画布状态（重构现有）
+    - 当前笔记ID
+    - 卡片列表、连线列表
+    - 画布模式（select/pan/connect）
+    - 缩放、平移状态
+  - `src/stores/useThemeStore.ts` - 主题状态
+    - 当前主题（light/dark）
+    - 主题切换逻辑
+
+- [ ] **3.2 创建自定义 Hooks**
+  - `src/hooks/useNotebooks.ts` - 笔记本数据管理
+  - `src/hooks/useCanvas.ts` - 画布操作封装
+  - `src/hooks/useCanvasMode.ts` - 画布模式切换
+
+### 阶段四：本地存储实现 (30分钟)
+
+- [ ] **4.1 更新 storage.ts**
+  - 实现 `NotebookStorage` 类
+    - `getAllNotebooks()` - 获取所有笔记
+    - `getNotebook(id)` - 获取单个笔记
+    - `saveNotebook(notebook)` - 保存笔记
+    - `deleteNotebook(id)` - 删除笔记
+  - 实现 `FolderStorage` 类
+    - `getAllFolders()` - 获取所有文件夹
+    - `saveFolder(folder)` - 保存文件夹
+    - `deleteFolder(id)` - 删除文件夹
+  - 实现 `CanvasStorage` 类
+    - `getCanvasData(notebookId)` - 获取画布数据
+    - `saveCanvasData(notebookId, data)` - 保存画布数据
+
+- [ ] **4.2 数据初始化**
+  - 创建 `src/lib/seedData.ts` - 初始数据
+  - 首次启动时填充示例笔记和文件夹
+
+### 阶段五：核心页面开发 (2小时)
+
+- [ ] **5.1 登录页面 (`app/(auth)/login/page.tsx`)**
+  - 实现简约登录界面（参考 `login.html`）
+  - 暂时使用伪登录（localStorage 记录状态）
+  - 实现主题切换按钮
+  - 登录后跳转到笔记架页面
+
+- [ ] **5.2 笔记架页面 (`app/(main)/shelf/page.tsx`)**
+  - **侧边栏**：
+    - Logo + 主题切换
+    - 新建笔记/新建文件夹按钮
+    - 导航链接（所有笔记、最近使用、回收站）
+    - 用户信息展示
+  - **主内容区**：
+    - 顶部搜索栏
+    - 文件夹区域（网格布局）
+    - 笔记区域（网格布局）
+    - 分割线
+  - **文件夹卡片**：
+    - 3D立体文件夹图标
+    - 文件夹名称、包含笔记数量
+    - 悬停上浮动画
+    - 更多操作按钮
+  - **笔记卡片**：
+    - 渐变色封面（随机分配）
+    - 笔记名称、卡片数量、修改时间
+    - 悬停上浮动画
+    - 更多操作按钮
+  - **模态框**：
+    - 新建笔记模态框
+    - 新建文件夹模态框
+
+- [ ] **5.3 画布页面 (`app/(main)/canvas/[id]/page.tsx`)**
+  - **画布容器**：
+    - 基于 React Flow 的无限画布
+    - 网格背景图案
+    - 支持平移、缩放
+  - **工具栏**：
+    - 返回按钮
+    - 选择模式按钮
+    - 拖动画布模式按钮
+    - 新建卡片按钮
+    - 连线模式按钮
+    - 居中按钮
+    - 放大/缩小按钮
+    - 保存按钮
+    - 主题切换按钮
+  - **模式指示器**：
+    - 顶部显示当前模式
+  - **卡片节点**：
+    - 毛玻璃效果
+    - 悬停显示编辑/删除按钮
+    - 可拖动（选择模式）
+  - **卡片编辑弹窗**：
+    - 点击编辑按钮弹出
+    - 标题输入框
+    - Tiptap 富文本编辑器
+    - 图片上传
+    - 保存/取消按钮
+
+### 阶段六：核心功能实现 (2小时)
+
+- [ ] **6.1 笔记架功能**
+  - 新建笔记（输入名称 → 创建 → 跳转画布）
+  - 删除笔记（确认提示 → 删除）
+  - 重命名笔记
+  - 点击笔记进入画布
+
+- [ ] **6.2 文件夹功能**
+  - 新建文件夹
+  - 删除文件夹（确认提示）
+  - 重命名文件夹
+  - 点击文件夹过滤笔记（P1）
+
+- [ ] **6.3 画布交互**
+  - 模式切换（select/pan/connect）
+  - 选择模式：拖动卡片
+  - 拖动模式：拖动画布
+  - 连线模式：点击两个卡片创建连线
+  - 居中功能：重置视图到中心
+  - 缩放功能：放大/缩小
+  - 保存功能：持久化画布数据
+
+- [ ] **6.4 卡片操作**
+  - 新建卡片（随机位置）
+  - 编辑卡片（弹窗模式）
+  - 删除卡片（含确认）
+  - 拖动卡片（更新位置）
+  - 连线自动跟随卡片移动
+
+- [ ] **6.5 主题切换**
+  - 实现 `useThemeStore` 的切换逻辑
+  - 使用 `document.documentElement.classList` 切换 `dark` 类
+  - 保存主题偏好到 localStorage
+  - 初始化时读取系统偏好或已保存偏好
+
+### 阶段七：优化与测试 (1小时)
+
+- [ ] **7.1 性能优化**
+  - React Flow 性能配置
+  - 图片懒加载
+  - 组件 memo 优化
+
+- [ ] **7.2 交互优化**
+  - 添加加载状态
+  - 优化动画过渡
+  - 添加操作反馈（Toast 提示）
+
+- [ ] **7.3 测试验证**
+  - 测试笔记创建/删除流程
+  - 测试画布拖动/缩放/连线
+  - 测试主题切换
+  - 测试数据持久化
+  - 测试浏览器刷新数据保留
+
+- [ ] **7.4 响应式适配**
+  - 确保侧边栏在小屏幕上折叠
+  - 确保工具栏在小屏幕上适配
+  - 确保卡片在触摸设备上可操作
+
+### 阶段八：文档更新 (30分钟)
+
+- [ ] **8.1 更新 README.md**
+  - 更新项目结构说明
+  - 更新功能特性列表
+  - 添加页面截图（可选）
+  - 更新开发进度
+
+- [ ] **8.2 添加代码注释**
+  - 关键组件添加 JSDoc
+  - 复杂逻辑添加行内注释
+
+- [ ] **8.3 创建 TESTING.md**
+  - 记录测试用例
+  - 记录已知问题
 
 ## 验收标准
 
-- ✅ 项目可以成功启动（`npm run dev` 无错误）
-- ✅ 浏览器访问 localhost:3000 能正常显示页面
-- ✅ 所有核心依赖已安装且版本兼容
-- ✅ 项目文件结构符合 MVP 计划书规划
+### 功能验收
+- ✅ 登录页面：可以伪登录并跳转到笔记架
+- ✅ 笔记架页面：
+  - 显示文件夹和笔记列表
+  - 可以新建/删除笔记
+  - 可以新建/删除文件夹
+  - 点击笔记进入画布
+  - 网格布局、渐变封面、3D文件夹图标正确显示
+- ✅ 画布页面：
+  - 可以新建/编辑/删除卡片
+  - 可以拖动卡片
+  - 可以创建连线
+  - 可以切换模式（select/pan/connect）
+  - 可以居中、缩放
+  - 毛玻璃效果正确显示
+- ✅ 主题切换：白天/黑夜模式切换正常，所有组件样式适配
+- ✅ 数据持久化：刷新页面后数据保留
+
+### 视觉验收
+- ✅ 与原型图 `notebook-shelf.html` 视觉一致（布局、颜色、动画）
+- ✅ 与原型图 `canvas.html` 视觉一致（毛玻璃效果、工具栏、卡片样式）
+- ✅ 主题切换平滑过渡
+- ✅ 悬停动画流畅
+- ✅ 分割线、阴影、圆角符合设计规范
+
+### 技术验收
 - ✅ TypeScript 编译无错误
 - ✅ ESLint 检查通过（无严重错误）
-- ✅ 基础样式系统配置完成（TailwindCSS 可用）
-- ✅ README.md 文档完整，说明清晰
+- ✅ 页面加载时间 < 2秒
+- ✅ 画布操作流畅（60fps）
+- ✅ 支持 Chrome、Firefox、Safari、Edge
 
-## 备注
+## 技术实现要点
 
-**技术选型确认：**
-- Next.js 版本：15.x（使用 App Router）
-- React 版本：18.x 或更高
-- Node.js 版本：建议 18.x 或更高
+### 1. 路由结构
+```
+/                          # 重定向到 /shelf
+/(auth)/login              # 登录页
+/(main)/shelf              # 笔记架页
+/(main)/canvas/[id]        # 画布页
+```
 
-**开发建议：**
-1. 优先使用官方文档推荐的配置方式
-2. 保持依赖版本最新稳定版，避免潜在兼容性问题
-3. 建立清晰的文件命名规范（统一使用 PascalCase 或 camelCase）
-4. 考虑添加 Prettier 进行代码格式化
+### 2. 数据结构
 
-**风险提示：**
-1. React Flow 和 Tiptap 可能有版本兼容性问题，需要测试验证
-2. Next.js 15 是较新版本，部分库可能尚未完全适配，遇到问题需查阅官方文档
-3. localforage 在某些浏览器可能有兼容性限制，需要做好降级方案准备
+**笔记 (Notebook)**
+```typescript
+interface Notebook {
+  id: string;
+  name: string;
+  folderId?: string;        // 所属文件夹ID（可选）
+  cardCount: number;        // 卡片数量
+  gradient: GradientKey;    // 封面渐变色
+  createdAt: number;
+  updatedAt: number;
+}
+```
 
-**后续任务衔接：**
-完成此任务后，进入第二阶段「画布实现」，将在 `src/components/Canvas/CanvasContainer.tsx` 中实现基于 React Flow 的无限画布功能。
+**文件夹 (Folder)**
+```typescript
+interface Folder {
+  id: string;
+  name: string;
+  notebookCount: number;    // 包含笔记数量
+  createdAt: number;
+}
+```
 
+**卡片 (Card)**
+```typescript
+interface Card {
+  id: string;
+  notebookId: string;       // 所属笔记ID
+  position: { x: number; y: number };
+  size: { width: number; height: number };
+  title: string;
+  content: string;          // Tiptap JSON 或 HTML
+  createdAt: number;
+  updatedAt: number;
+}
+```
+
+**连线 (Connection)**
+```typescript
+interface Connection {
+  id: string;
+  notebookId: string;
+  source: string;           // 起始卡片ID
+  target: string;           // 目标卡片ID
+  type: 'default' | 'arrow'; // 连线类型
+}
+```
+
+### 3. 渐变色系配置（扩展）
+
+```typescript
+// src/lib/constants.ts
+export const NOTEBOOK_GRADIENTS = {
+  blue: { from: '#4E8CEB', to: '#64C7FF' },
+  purple: { from: '#8B5CF6', to: '#A855F7' },
+  pink: { from: '#EC4899', to: '#F472B6' },
+  orange: { from: '#F59E0B', to: '#FB923C' },
+  green: { from: '#10B981', to: '#34D399' },
+  teal: { from: '#14B8A6', to: '#2DD4BF' },
+  cyan: { from: '#06B6D4', to: '#22D3EE' },
+  indigo: { from: '#6366F1', to: '#818CF8' },
+  rose: { from: '#F43F5E', to: '#FB7185' },
+  amber: { from: '#F59E0B', to: '#FCD34D' },
+} as const;
+
+export type GradientKey = keyof typeof NOTEBOOK_GRADIENTS;
+```
+
+### 4. 主题系统实现
+
+```typescript
+// src/stores/useThemeStore.ts
+import { create } from 'zustand';
+import { persist } from 'zustand/middleware';
+
+interface ThemeStore {
+  theme: 'light' | 'dark';
+  toggleTheme: () => void;
+  setTheme: (theme: 'light' | 'dark') => void;
+}
+
+export const useThemeStore = create<ThemeStore>()(
+  persist(
+    (set) => ({
+      theme: 'light',
+      toggleTheme: () =>
+        set((state) => {
+          const newTheme = state.theme === 'light' ? 'dark' : 'light';
+          document.documentElement.classList.toggle('dark', newTheme === 'dark');
+          return { theme: newTheme };
+        }),
+      setTheme: (theme) => {
+        document.documentElement.classList.toggle('dark', theme === 'dark');
+        set({ theme });
+      },
+    }),
+    {
+      name: 'theme-storage',
+    }
+  )
+);
+```
+
+### 5. React Flow 配置
+
+```typescript
+// 画布默认配置
+const reactFlowProps = {
+  nodeTypes: { card: CardNode },
+  defaultViewport: { x: 0, y: 0, zoom: 1 },
+  minZoom: 0.25,
+  maxZoom: 2,
+  panOnScroll: true,
+  panOnDrag: canvasMode === 'pan',
+  selectNodesOnDrag: canvasMode === 'select',
+  connectionMode: ConnectionMode.Loose,
+  fitView: false,
+};
+```
+
+### 6. 3D文件夹图标实现
+
+```css
+/* theme.css */
+.folder-icon-3d {
+  position: relative;
+  width: 80%;
+  height: 70%;
+  display: flex;
+  align-items: flex-end;
+}
+
+.folder-body {
+  width: 100%;
+  height: 75%;
+  background: linear-gradient(135deg, #fbbf24 0%, #f59e0b 100%);
+  border-radius: 0 8px 8px 8px;
+  box-shadow: 0 4px 12px rgba(251, 191, 36, 0.3);
+  position: relative;
+  transition: all 0.3s ease;
+}
+
+.folder-tab {
+  position: absolute;
+  top: -12%;
+  left: 0;
+  width: 45%;
+  height: 20%;
+  background: linear-gradient(135deg, #fcd34d 0%, #fbbf24 100%);
+  border-radius: 8px 8px 0 0;
+}
+```
+
+## 风险与注意事项
+
+### 技术风险
+1. **React Flow 性能**：大量卡片时可能影响性能
+   - 解决：使用 React Flow 的性能优化配置（`nodesDraggable`、`nodesConnectable` 动态控制）
+   
+2. **IndexedDB 兼容性**：某些浏览器私密模式不支持
+   - 解决：添加降级方案（localStorage）
+
+3. **Tiptap 图片上传**：需要实现图片处理逻辑
+   - 解决：暂时使用 base64 存储（P0）
+
+### 开发注意事项
+1. **保持与原型图一致**：严格按照 `prototypes/` 中的视觉设计实现
+2. **渐进增强**：先实现 P0 功能，P1/P2 功能后续迭代
+3. **数据结构设计**：预留扩展字段，便于后续功能添加
+4. **命名规范**：
+   - 组件文件：PascalCase（`NoteCard.tsx`）
+   - Hook文件：camelCase（`useNotebooks.ts`）
+   - 常量文件：camelCase（`constants.ts`）
+
+### MVP 范围控制
+**本次实现（P0）：**
+- ✅ 登录页（伪登录）
+- ✅ 笔记架页面（网格展示、新建/删除）
+- ✅ 画布页面（卡片CRUD、连线、模式切换）
+- ✅ 主题切换
+- ✅ 本地存储
+
+**暂不实现（P1/P2）：**
+- ❌ 文件夹过滤功能
+- ❌ 搜索功能
+- ❌ 回收站
+- ❌ 撤销/重做
+- ❌ 卡片调整大小
+- ❌ 真实用户登录系统
+
+## 预计时间
+
+- **总计**：约 7-8 小时
+- **每日开发**：建议 2-3 小时/天，3-4 天完成
+
+## 后续任务
+
+完成此任务后，进入以下任务：
+1. **任务 2**：文件夹过滤与搜索功能（P1）
+2. **任务 3**：撤销/重做系统（P1）
+3. **任务 4**：卡片高级功能（复制、调整大小）（P1）
+4. **任务 5**：用户登录与数据同步（P2）
+
+---
+
+**备注**：本任务文档会随着开发进度实时更新 ✅
