编写重构文档并删除废弃代码

--- a/docs/management/task/1.project-initialization.md
+++ b/docs/management/task/1.project-initialization.md
@@ -4,512 +4,473 @@
 
 - **任务名称**: 项目初始化与重构 (Project Initialization & Refactor)
 - **创建时间**: 2025-01-25
+- **更新时间**: 2025-01-26
 - **优先级**: 高
-- **状态**: 进行中
+- **状态**: 已完成核心功能
 
-## 任务描述
+## 任务概述
 
-根据最新的原型图和产品需求文档，对现有项目进行全面重构。当前项目已有基础框架（Next.js 15 + TailwindCSS 4），但需要重新设计架构以匹配原型图的交互逻辑和视觉设计。
+本任务完成了基于原型图的项目重构，从零搭建了完整的多页面卡片笔记应用。项目采用 Next.js 15 + TailwindCSS 4 技术栈，实现了登录页、笔记架页和画布页三个核心页面，并建立了完整的状态管理和数据持久化方案。
 
-**核心变更：**
-1. **多页面架构**：从单页画布改为多页面应用（登录页 → 笔记架页 → 画布页）
-2. **笔记管理系统**：实现笔记架（书架）的网格布局、文件夹管理
-3. **视觉系统升级**：实现原型图的视觉规范（3D文件夹图标、渐变封面、毛玻璃卡片）
-4. **主题系统**：完善白天/黑夜模式切换
-5. **交互模式**：画布的选择、拖动、连线三种模式
+**核心架构：**
+- **多页面应用**：登录页 → 笔记架页 → 画布页的页面流转
+- **状态管理**：基于 Zustand 的笔记本和画布状态管理
+- **数据持久化**：基于 IndexedDB（localforage）的画布数据存储 + localStorage 的笔记本数据存储
+- **主题系统**：白天/黑夜模式切换，全局主题管理
+- **无限画布**：基于 React Flow 实现的可缩放、平移的无限画布
 
-**参考依据：**
-- `prototypes/notebook-shelf.html` - 笔记架页面设计
-- `prototypes/canvas.html` - 画布页面设计
-- `prototypes/login.html` - 登录页面设计
+**实现依据：**
+- `prototypes/notebook-shelf.html` - 笔记架页面原型
+- `prototypes/canvas.html` - 画布页面原型
+- `prototypes/login.html` - 登录页面原型
 - `docs/产品需求文档.md` - 功能需求文档
+- `docs/视觉规范文档.md` - 视觉设计规范
 
-## TODO-LIST
+## 实现内容
 
-### 阶段一：项目结构调整 (30分钟)
+### 一、项目架构搭建
 
-- [ ] **1.1 调整页面路由结构**
-  - 创建 `src/app/(auth)/login/page.tsx` - 登录页面
-  - 创建 `src/app/(main)/shelf/page.tsx` - 笔记架页面
-  - 创建 `src/app/(main)/canvas/[id]/page.tsx` - 动态画布页面
-  - 修改 `src/app/page.tsx` 为重定向到登录页或笔记架
-  - 创建 `src/app/(main)/layout.tsx` - 主布局（包含侧边栏）
+#### 1.1 页面路由结构
+已完成三个核心页面的路由配置：
+- **登录页面** (`app/(auth)/login/page.tsx`)：实现伪登录功能，用户输入任意用户名即可进入系统
+- **笔记架页面** (`app/(main)/shelf/page.tsx`)：展示所有笔记本和文件夹的网格布局
+- **画布页面** (`app/(main)/canvas/[id]/page.tsx`)：动态路由，根据笔记本 ID 加载对应的卡片画布
+- **主布局** (`app/(main)/layout.tsx`)：侧边栏布局，包含导航和操作按钮
 
-- [ ] **1.2 调整组件目录结构**
-  - 移动 `Navbar.tsx` → `Sidebar.tsx`（改为侧边栏组件）
-  - 创建 `src/components/Shelf/` 目录：
-    - `NoteCard.tsx` - 笔记卡片组件
-    - `FolderCard.tsx` - 文件夹卡片组件
-    - `ShelfGrid.tsx` - 网格布局容器
-  - 创建 `src/components/Canvas/` 新组件：
-    - `CanvasToolbar.tsx` - 画布工具栏
-    - `ModeIndicator.tsx` - 模式指示器
-    - `CardEditModal.tsx` - 卡片编辑弹窗
-  - 创建 `src/components/UI/` 新组件：
-    - `ThemeToggle.tsx` - 主题切换按钮
-    - `SearchBar.tsx` - 搜索框
+#### 1.2 组件目录结构
+按功能模块组织了组件目录：
+- **Canvas 组件**：`CanvasContainer.tsx`（画布容器）、`CardNode.tsx`（卡片节点）、`CardEditModal.tsx`（卡片编辑弹窗）、`MiniMapPanel.tsx`（小地图）、`ZoomControls.tsx`（缩放控制）
+- **Shelf 组件**：`NoteCard.tsx`（笔记卡片）、`FolderCard.tsx`（文件夹卡片）
+- **Editor 组件**：`TiptapEditor.tsx`（富文本编辑器）、`ImageUploader.tsx`（图片上传）
+- **UI 组件**：`Sidebar.tsx`（侧边栏）、`Toolbar.tsx`（工具栏）、`Toast.tsx`（提示）、`ConfirmDialog.tsx`（确认对话框）、`InputDialog.tsx`（输入对话框）、`ColorPicker.tsx`（颜色选择器）
 
-- [ ] **1.3 创建数据模型**
-  - 创建 `src/types/` 目录
-  - `src/types/notebook.ts` - 笔记本数据类型
-  - `src/types/folder.ts` - 文件夹数据类型
-  - `src/types/card.ts` - 卡片数据类型
-  - `src/types/connection.ts` - 连线数据类型
+#### 1.3 数据模型
+创建了完整的 TypeScript 类型定义：
+- `types/notebook.ts`：笔记本数据结构（包含 ID、名称、文件夹归属、卡片数量、渐变色键、时间戳）
+- `types/folder.ts`：文件夹数据结构（包含 ID、名称、笔记数量、创建时间）
+- `types/card.ts`：卡片数据结构（包含 ID、笔记本归属、位置、大小、标题、内容、颜色、时间戳）
+- `types/connection.ts`：连线数据结构（包含 ID、笔记本归属、起点卡片 ID、终点卡片 ID、连线类型）
 
-### 阶段二：视觉系统实现 (45分钟)
+### 二、视觉系统实现
 
-- [ ] **2.1 更新 constants.ts**
-  - 添加笔记封面渐变色配置（8-10种渐变）
-  - 添加文件夹3D图标配色
-  - 添加主题颜色变量（primary: #137fec）
-  - 添加画布配置（网格大小、背景色）
+#### 2.1 常量配置 (constants.ts)
+定义了完整的视觉系统常量：
+- **笔记本渐变色**：10 种渐变配色方案（蓝、紫、粉、橙、绿、青、天蓝、靛蓝、玫红、琥珀）
+- **卡片渐变色**：区分明暗主题的 3 种卡片渐变（海雾蓝、柔粉金、薄荷绿）
+- **主题颜色**：主色调 `#137fec`，背景色配置
+- **画布参数**：默认缩放比例、最小/最大缩放、缩放步进
+- **卡片默认值**：宽度 400px、最小高度 200px、圆角、阴影、透明度等
 
-- [ ] **2.2 更新 theme.css**
-  - 定义 `.glass-card` 毛玻璃效果样式
-  - 定义 `.folder-icon-3d` 3D文件夹样式
-  - 定义 `.note-cover` 笔记封面样式
-  - 定义 `.shelf-divider` 分割线样式
-  - 定义 `.canvas-bg` 画布背景网格样式
-  - 定义悬停动画和过渡效果
+#### 2.2 主题样式 (globals.css & theme.css)
+实现了完整的主题系统：
+- **CSS 变量**：定义了 `--primary`、`--bg-light`、`--bg-dark` 等主题变量
+- **暗色模式**：通过 `.dark` 类切换，所有组件响应主题变化
+- **Material Symbols**：集成 Google 图标字体，使用 Outlined 和 Rounded 两种变体
+- **自定义样式类**：`.glass-card`（毛玻璃效果）、`.shelf-divider`（分割线）、`.folder-icon-3d`（3D 文件夹图标）
 
-- [ ] **2.3 配置 globals.css**
-  - 引入 Material Symbols Outlined 字体
-  - 引入 Inter 字体（已完成）
-  - 定义 CSS 变量用于主题切换
-  - 配置暗色模式变量
+#### 2.3 TailwindCSS 配置
+使用 TailwindCSS 4 的 `@theme` 语法定义自定义颜色和配置，启用 `class` 模式的暗色主题切换。
 
-- [ ] **2.4 更新 TailwindCSS 配置**
-  - 在 `globals.css` 中使用 `@theme` 定义自定义颜色
-  - 添加 `backdrop-blur` 工具类配置
-  - 配置 `darkMode: 'class'`
+### 三、状态管理系统
 
-### 阶段三：状态管理系统 (30分钟)
+#### 3.1 Zustand Store
+创建了三个核心状态管理器：
 
-- [ ] **3.1 创建 Zustand Store**
-  - `src/stores/useNotebookStore.ts` - 笔记本管理状态
-    - 笔记列表、文件夹列表
-    - 新建/删除/重命名笔记
-    - 新建/删除/重命名文件夹
-  - `src/stores/useCanvasStore.ts` - 画布状态（重构现有）
-    - 当前笔记ID
-    - 卡片列表、连线列表
-    - 画布模式（select/pan/connect）
-    - 缩放、平移状态
-  - `src/stores/useThemeStore.ts` - 主题状态
-    - 当前主题（light/dark）
-    - 主题切换逻辑
+**笔记本状态** (`hooks/useNotebookStore.ts`)：
+- 管理笔记本和文件夹列表
+- 提供 CRUD 操作（新建、更新、删除、查询）
+- 自动同步到 localStorage
+- 维护文件夹与笔记本的关联关系
 
-- [ ] **3.2 创建自定义 Hooks**
-  - `src/hooks/useNotebooks.ts` - 笔记本数据管理
-  - `src/hooks/useCanvas.ts` - 画布操作封装
-  - `src/hooks/useCanvasMode.ts` - 画布模式切换
+**画布状态** (`hooks/useCanvasStore.ts`)：
+- 管理当前笔记本的卡片和连线
+- 支持三种画布模式：选择（select）、拖动（pan）、连线（connect）
+- 提供卡片和连线的 CRUD 操作
+- 管理连线模式的临时状态
+- 自动保存画布数据到 IndexedDB
 
-### 阶段四：本地存储实现 (30分钟)
+**主题状态** (`hooks/useTheme.ts`)：
+- 管理明暗主题切换
+- 持久化主题偏好到 localStorage
+- 初始化时读取系统偏好或已保存偏好
 
-- [ ] **4.1 更新 storage.ts**
-  - 实现 `NotebookStorage` 类
-    - `getAllNotebooks()` - 获取所有笔记
-    - `getNotebook(id)` - 获取单个笔记
-    - `saveNotebook(notebook)` - 保存笔记
-    - `deleteNotebook(id)` - 删除笔记
-  - 实现 `FolderStorage` 类
-    - `getAllFolders()` - 获取所有文件夹
-    - `saveFolder(folder)` - 保存文件夹
-    - `deleteFolder(id)` - 删除文件夹
-  - 实现 `CanvasStorage` 类
-    - `getCanvasData(notebookId)` - 获取画布数据
-    - `saveCanvasData(notebookId, data)` - 保存画布数据
+#### 3.2 数据流设计
+- **笔记本数据**：通过 `useNotebookStore` 管理，存储在 localStorage
+- **画布数据**：通过 `useCanvasStore` 管理，存储在 IndexedDB（使用 localforage）
+- **主题偏好**：通过 `useTheme` 管理，存储在 localStorage
 
-- [ ] **4.2 数据初始化**
-  - 创建 `src/lib/seedData.ts` - 初始数据
-  - 首次启动时填充示例笔记和文件夹
+### 四、数据持久化方案
 
-### 阶段五：核心页面开发 (2小时)
+#### 4.1 存储模块 (storage.ts)
+基于 localforage 封装了 IndexedDB 操作：
+- `saveCanvasState()`：保存笔记本的卡片和连线数据
+- `loadCanvasState()`：加载笔记本的画布数据
+- `clearCanvasState()`：清空画布数据
+- `deleteNotebookCanvas()`：删除笔记本时清理画布数据
+- `getStorageInfo()`：查询存储空间使用情况
 
-- [ ] **5.1 登录页面 (`app/(auth)/login/page.tsx`)**
-  - 实现简约登录界面（参考 `login.html`）
-  - 暂时使用伪登录（localStorage 记录状态）
-  - 实现主题切换按钮
-  - 登录后跳转到笔记架页面
+#### 4.2 示例数据 (seedData.ts)
+提供了初始化示例数据的函数，首次启动时自动创建示例笔记本和文件夹，方便用户快速体验功能。
 
-- [ ] **5.2 笔记架页面 (`app/(main)/shelf/page.tsx`)**
-  - **侧边栏**：
-    - Logo + 主题切换
-    - 新建笔记/新建文件夹按钮
-    - 导航链接（所有笔记、最近使用、回收站）
-    - 用户信息展示
-  - **主内容区**：
-    - 顶部搜索栏
-    - 文件夹区域（网格布局）
-    - 笔记区域（网格布局）
-    - 分割线
-  - **文件夹卡片**：
-    - 3D立体文件夹图标
-    - 文件夹名称、包含笔记数量
-    - 悬停上浮动画
-    - 更多操作按钮
-  - **笔记卡片**：
-    - 渐变色封面（随机分配）
-    - 笔记名称、卡片数量、修改时间
-    - 悬停上浮动画
-    - 更多操作按钮
-  - **模态框**：
-    - 新建笔记模态框
-    - 新建文件夹模态框
+### 五、核心页面实现
 
-- [ ] **5.3 画布页面 (`app/(main)/canvas/[id]/page.tsx`)**
-  - **画布容器**：
-    - 基于 React Flow 的无限画布
-    - 网格背景图案
-    - 支持平移、缩放
-  - **工具栏**：
-    - 返回按钮
-    - 选择模式按钮
-    - 拖动画布模式按钮
-    - 新建卡片按钮
-    - 连线模式按钮
-    - 居中按钮
-    - 放大/缩小按钮
-    - 保存按钮
-    - 主题切换按钮
-  - **模式指示器**：
-    - 顶部显示当前模式
-  - **卡片节点**：
-    - 毛玻璃效果
-    - 悬停显示编辑/删除按钮
-    - 可拖动（选择模式）
-  - **卡片编辑弹窗**：
-    - 点击编辑按钮弹出
-    - 标题输入框
-    - Tiptap 富文本编辑器
-    - 图片上传
-    - 保存/取消按钮
+#### 5.1 登录页面
+- 背景图片 + 毛玻璃效果
+- 主题切换按钮（右上角）
+- 用户名输入框 + 登录按钮
+- 伪登录逻辑（保存到 localStorage）
+- 自动初始化示例数据
 
-### 阶段六：核心功能实现 (2小时)
+#### 5.2 笔记架页面
+**侧边栏功能**：
+- Logo 和主题切换按钮
+- 新建笔记按钮
+- 新建文件夹按钮
+- 导航链接（所有笔记）
+- 用户信息展示
 
-- [ ] **6.1 笔记架功能**
-  - 新建笔记（输入名称 → 创建 → 跳转画布）
-  - 删除笔记（确认提示 → 删除）
-  - 重命名笔记
-  - 点击笔记进入画布
+**主内容区**：
+- 顶部标题 + 搜索框
+- 文件夹网格区域（3D 立体图标、笔记数量统计）
+- 笔记网格区域（渐变封面、卡片数量、更新时间）
+- 悬停动画（上浮效果）
+- 卡片操作菜单（重命名、删除）
 
-- [ ] **6.2 文件夹功能**
-  - 新建文件夹
-  - 删除文件夹（确认提示）
-  - 重命名文件夹
-  - 点击文件夹过滤笔记（P1）
+**交互模态框**：
+- 新建笔记模态框（输入名称后自动跳转到画布）
+- 新建文件夹模态框
+- 确认删除对话框
+- 重命名输入对话框
+- Toast 提示反馈
 
-- [ ] **6.3 画布交互**
-  - 模式切换（select/pan/connect）
-  - 选择模式：拖动卡片
-  - 拖动模式：拖动画布
-  - 连线模式：点击两个卡片创建连线
-  - 居中功能：重置视图到中心
-  - 缩放功能：放大/缩小
-  - 保存功能：持久化画布数据
+#### 5.3 画布页面
+**工具栏功能**：
+- 返回笔记架按钮
+- 笔记本名称显示
+- 模式切换按钮组（选择/拖动/连线）
+- 新建卡片按钮（双击画布也可创建）
+- 居中按钮
+- 主题切换按钮
+- 自动保存指示
 
-- [ ] **6.4 卡片操作**
-  - 新建卡片（随机位置）
-  - 编辑卡片（弹窗模式）
-  - 删除卡片（含确认）
-  - 拖动卡片（更新位置）
-  - 连线自动跟随卡片移动
+**画布容器**：
+- 基于 React Flow 的无限画布
+- 网格背景（响应主题变化）
+- 支持鼠标滚轮缩放
+- 支持拖动画布（拖动模式）
+- 支持框选（选择模式）
 
-- [ ] **6.5 主题切换**
-  - 实现 `useThemeStore` 的切换逻辑
-  - 使用 `document.documentElement.classList` 切换 `dark` 类
-  - 保存主题偏好到 localStorage
-  - 初始化时读取系统偏好或已保存偏好
+**卡片节点**：
+- 毛玻璃效果卡片
+- 标题 + 内容预览
+- 悬停显示操作按钮（编辑/删除）
+- 支持拖动（选择模式）
+- 支持连线（连线模式）
+- 响应主题变化
 
-### 阶段七：优化与测试 (1小时)
+**辅助功能**：
+- 小地图面板（可切换显隐）
+- 缩放控制条
+- 连线模式提示
+- 卡片编辑弹窗（Tiptap 富文本编辑器 + 颜色选择器 + 图片上传）
 
-- [ ] **7.1 性能优化**
-  - React Flow 性能配置
-  - 图片懒加载
-  - 组件 memo 优化
+### 六、核心功能实现
 
-- [ ] **7.2 交互优化**
-  - 添加加载状态
-  - 优化动画过渡
-  - 添加操作反馈（Toast 提示）
+#### 6.1 笔记架功能
+✅ 新建笔记（自动分配渐变色，创建后跳转到画布）
+✅ 删除笔记（带确认提示，同步删除画布数据）
+✅ 重命名笔记（通过输入对话框）
+✅ 点击笔记进入画布
 
-- [ ] **7.3 测试验证**
-  - 测试笔记创建/删除流程
-  - 测试画布拖动/缩放/连线
-  - 测试主题切换
-  - 测试数据持久化
-  - 测试浏览器刷新数据保留
+#### 6.2 文件夹功能
+✅ 新建文件夹
+✅ 删除文件夹（笔记移至根目录）
+✅ 重命名文件夹
+⏸ 点击文件夹过滤笔记（待实现）
 
-- [ ] **7.4 响应式适配**
-  - 确保侧边栏在小屏幕上折叠
-  - 确保工具栏在小屏幕上适配
-  - 确保卡片在触摸设备上可操作
+#### 6.3 画布交互
+✅ 三种模式切换（选择/拖动/连线）
+✅ 选择模式：拖动卡片、框选
+✅ 拖动模式：拖动画布、滚轮缩放
+✅ 连线模式：点击两个卡片创建连线
+✅ 双击画布创建卡片
+✅ 居中功能（fitView）
+✅ 缩放控制（放大/缩小）
+✅ 自动保存（防抖 1 秒）
 
-### 阶段八：文档更新 (30分钟)
+#### 6.4 卡片操作
+✅ 新建卡片（双击画布）
+✅ 编辑卡片（弹窗模式，Tiptap 富文本编辑器）
+✅ 删除卡片（带确认，自动删除相关连线）
+✅ 拖动卡片（自动保存位置）
+✅ 颜色选择（3 种渐变色）
+✅ 图片上传（base64 存储）
 
-- [ ] **8.1 更新 README.md**
-  - 更新项目结构说明
-  - 更新功能特性列表
-  - 添加页面截图（可选）
-  - 更新开发进度
+#### 6.5 主题切换
+✅ 白天/黑夜模式切换
+✅ 主题偏好持久化
+✅ 初始化时读取系统偏好
+✅ 所有组件响应主题变化
+✅ 平滑过渡动画
 
-- [ ] **8.2 添加代码注释**
-  - 关键组件添加 JSDoc
-  - 复杂逻辑添加行内注释
+### 七、优化与测试
 
-- [ ] **8.3 创建 TESTING.md**
-  - 记录测试用例
-  - 记录已知问题
+#### 7.1 性能优化
+✅ React Flow 性能配置（按需启用交互）
+✅ 防抖保存（避免频繁写入）
+✅ useMemo/useCallback 优化渲染
 
-## 验收标准
+#### 7.2 交互优化
+✅ 加载状态显示
+✅ Toast 提示反馈
+✅ 悬停动画
+✅ 模态框动画
+✅ 主题切换过渡
 
-### 功能验收
-- ✅ 登录页面：可以伪登录并跳转到笔记架
-- ✅ 笔记架页面：
-  - 显示文件夹和笔记列表
-  - 可以新建/删除笔记
-  - 可以新建/删除文件夹
-  - 点击笔记进入画布
-  - 网格布局、渐变封面、3D文件夹图标正确显示
-- ✅ 画布页面：
-  - 可以新建/编辑/删除卡片
-  - 可以拖动卡片
-  - 可以创建连线
-  - 可以切换模式（select/pan/connect）
-  - 可以居中、缩放
-  - 毛玻璃效果正确显示
-- ✅ 主题切换：白天/黑夜模式切换正常，所有组件样式适配
-- ✅ 数据持久化：刷新页面后数据保留
+#### 7.3 数据持久化
+✅ 笔记本数据持久化（localStorage）
+✅ 画布数据持久化（IndexedDB）
+✅ 刷新页面数据保留
+✅ 删除笔记时清理画布数据
 
-### 视觉验收
-- ✅ 与原型图 `notebook-shelf.html` 视觉一致（布局、颜色、动画）
-- ✅ 与原型图 `canvas.html` 视觉一致（毛玻璃效果、工具栏、卡片样式）
-- ✅ 主题切换平滑过渡
-- ✅ 悬停动画流畅
-- ✅ 分割线、阴影、圆角符合设计规范
+## 项目现状
 
-### 技术验收
-- ✅ TypeScript 编译无错误
-- ✅ ESLint 检查通过（无严重错误）
-- ✅ 页面加载时间 < 2秒
-- ✅ 画布操作流畅（60fps）
-- ✅ 支持 Chrome、Firefox、Safari、Edge
+### 已完成功能
+- ✅ 登录页面：伪登录，主题切换，自动初始化示例数据
+- ✅ 笔记架页面：网格布局，文件夹/笔记 CRUD，渐变封面，3D 文件夹图标，悬停动画
+- ✅ 画布页面：无限画布，卡片 CRUD，连线功能，三种模式切换，富文本编辑器，颜色选择，图片上传
+- ✅ 主题系统：白天/黑夜模式无缝切换，全局主题管理
+- ✅ 数据持久化：笔记本数据（localStorage），画布数据（IndexedDB）
+- ✅ 交互优化：Toast 提示，确认对话框，加载状态，动画过渡
 
-## 技术实现要点
+### 待优化问题
+- ⚠️ 卡片编辑模态框与原型图有差异（需要重新设计）
+- ⚠️ 工具栏模式按钮过多（需要简化）
+- ⚠️ 画布操作逻辑有待优化（模式切换、快捷键等）
+- ⚠️ 部分图标样式需要调整
 
-### 1. 路由结构
-```
-/                          # 重定向到 /shelf
-/(auth)/login              # 登录页
-/(main)/shelf              # 笔记架页
-/(main)/canvas/[id]        # 画布页
-```
+## 后续开发计划
 
-### 2. 数据结构
+### 阶段一：画布编辑器优化 (优先级：高)
 
-**笔记 (Notebook)**
+#### 1.1 卡片编辑器重构
+**目标**：根据原型图重新设计卡片编辑交互方式
+
+**当前问题**：
+- 当前采用模态框弹窗编辑，与原型图不符
+- 原型图中应该是直接在卡片上进行内联编辑
+
+**改进方案**：
+- 实现卡片内联编辑模式（点击卡片进入编辑状态）
+- 编辑时卡片自动展开，显示 Tiptap 编辑器
+- 点击卡片外部或按 ESC 退出编辑模式
+- 移除当前的 `CardEditModal` 弹窗组件
+- 优化编辑器的布局和样式，符合原型图设计
+
+**技术要点**：
+- 在 `CardNode` 组件内集成编辑器
+- 使用状态管理编辑模式（isEditing）
+- 编辑时禁用画布拖动
+- 自动保存编辑内容
+
+#### 1.2 工具栏简化与优化
+**目标**：精简画布工具栏，优化操作流程
+
+**当前问题**：
+- 工具栏按钮过多（选择/拖动/连线/新建卡片/居中等）
+- 三种模式切换不够直观
+- 部分功能使用频率低，占用工具栏空间
+
+**改进方案**：
+- **移除"拖动画布"模式按钮**：改为按住空格键临时进入拖动模式（类似 Figma）
+- **合并模式按钮**：只保留"选择模式"和"连线模式"两个按钮
+- **优化按钮布局**：
+  - 左侧：返回按钮 + 笔记本名称
+  - 中间：模式切换按钮组（选择/连线）
+  - 右侧：新建卡片 + 居中 + 缩放控制 + 主题切换
+- **添加快捷键提示**：悬停显示快捷键（如：空格拖动，V 选择，C 连线）
+
+**技术要点**：
+- 实现按住空格键临时切换到拖动模式
+- 松开空格键恢复之前的模式
+- 重新设计 `Toolbar` 组件布局
+- 添加快捷键监听（useEffect + addEventListener）
+
+#### 1.3 画布操作逻辑优化
+**目标**：优化画布交互体验，提升操作效率
+
+**改进项**：
+- **双击卡片进入编辑**：替代当前的点击编辑按钮
+- **拖拽创建卡片**：在画布上拖拽绘制卡片区域
+- **右键菜单**：右键卡片显示操作菜单（编辑/删除/复制/改颜色）
+- **框选多个卡片**：支持批量操作（移动/删除）
+- **连线优化**：
+  - 支持拖拽卡片边缘创建连线（替代连线模式）
+  - 选中连线后可删除
+  - 连线样式优化（贝塞尔曲线、箭头样式）
+- **键盘快捷键**：
+  - `V` - 选择模式
+  - `C` - 连线模式
+  - `Space` - 临时拖动画布
+  - `Delete` - 删除选中的卡片/连线
+  - `Cmd/Ctrl + Z` - 撤销（后续实现）
+  - `Cmd/Ctrl + D` - 复制卡片（后续实现）
+
+**技术要点**：
+- 重构 `CanvasContainer` 的事件处理逻辑
+- 添加右键菜单组件
+- 实现快捷键系统（useKeyboard hook）
+- 优化 React Flow 配置
+
+#### 1.4 图标和界面细节优化
+**目标**：提升视觉一致性和美观度
+
+**优化项**：
+- 统一图标风格（全部使用 Material Symbols Rounded）
+- 调整按钮大小和间距
+- 优化卡片阴影和毛玻璃效果
+- 调整连线的颜色和粗细
+- 优化小地图的样式
+- 改进 Toast 提示的位置和动画
+
+### 阶段二：笔记架功能完善 (优先级：中)
+
+#### 2.1 文件夹过滤功能
+- 点击文件夹时，笔记区域只显示该文件夹下的笔记
+- 添加"全部笔记"选项，取消过滤
+- 面包屑导航显示当前过滤状态
+
+#### 2.2 搜索功能
+- 实时搜索笔记和文件夹
+- 支持模糊匹配
+- 高亮搜索结果
+
+#### 2.3 排序功能
+- 按修改时间排序（默认）
+- 按创建时间排序
+- 按名称排序
+- 按卡片数量排序
+
+### 阶段三：卡片高级功能 (优先级：中)
+
+#### 3.1 卡片调整大小
+- 拖拽卡片边缘调整大小
+- 最小/最大尺寸限制
+- 调整大小时自动保存
+
+#### 3.2 卡片复制
+- 快捷键复制（Cmd/Ctrl + D）
+- 右键菜单复制
+- 复制后偏移位置
+
+#### 3.3 卡片样式扩展
+- 增加更多渐变色选项
+- 支持纯色背景
+- 支持自定义颜色
+
+### 阶段四：撤销/重做系统 (优先级：低)
+
+#### 4.1 历史记录管理
+- 实现历史栈（基于 Immer）
+- 记录所有可撤销操作（卡片移动、创建、删除、编辑等）
+- 限制历史记录数量（如 50 条）
+
+#### 4.2 快捷键实现
+- `Cmd/Ctrl + Z` - 撤销
+- `Cmd/Ctrl + Shift + Z` - 重做
+
+### 阶段五：性能优化与细节打磨 (优先级：低)
+
+#### 5.1 性能优化
+- 大量卡片时的渲染优化
+- 图片懒加载
+- 虚拟滚动（笔记架）
+
+#### 5.2 响应式适配
+- 移动端适配
+- 平板适配
+- 触摸手势支持
+
+#### 5.3 错误处理
+- 网络错误提示
+- 存储空间不足提示
+- 数据损坏恢复
+
+## 技术要点参考
+
+### 空格键拖动实现示例
 ```typescript
-interface Notebook {
-  id: string;
-  name: string;
-  folderId?: string;        // 所属文件夹ID（可选）
-  cardCount: number;        // 卡片数量
-  gradient: GradientKey;    // 封面渐变色
-  createdAt: number;
-  updatedAt: number;
+// hooks/useSpaceDrag.ts
+export function useSpaceDrag() {
+  const [isSpacePressed, setIsSpacePressed] = useState(false);
+  
+  useEffect(() => {
+    const handleKeyDown = (e: KeyboardEvent) => {
+      if (e.code === 'Space' && !e.repeat) {
+        setIsSpacePressed(true);
+      }
+    };
+    
+    const handleKeyUp = (e: KeyboardEvent) => {
+      if (e.code === 'Space') {
+        setIsSpacePressed(false);
+      }
+    };
+    
+    window.addEventListener('keydown', handleKeyDown);
+    window.addEventListener('keyup', handleKeyUp);
+    
+    return () => {
+      window.removeEventListener('keydown', handleKeyDown);
+      window.removeEventListener('keyup', handleKeyUp);
+    };
+  }, []);
+  
+  return isSpacePressed;
 }
 ```
 
-**文件夹 (Folder)**
+### 卡片内联编辑示例
 ```typescript
-interface Folder {
-  id: string;
-  name: string;
-  notebookCount: number;    // 包含笔记数量
-  createdAt: number;
-}
-```
+// components/Canvas/CardNode.tsx
+const [isEditing, setIsEditing] = useState(false);
 
-**卡片 (Card)**
-```typescript
-interface Card {
-  id: string;
-  notebookId: string;       // 所属笔记ID
-  position: { x: number; y: number };
-  size: { width: number; height: number };
-  title: string;
-  content: string;          // Tiptap JSON 或 HTML
-  createdAt: number;
-  updatedAt: number;
-}
-```
+const handleDoubleClick = () => {
+  setIsEditing(true);
+};
 
-**连线 (Connection)**
-```typescript
-interface Connection {
-  id: string;
-  notebookId: string;
-  source: string;           // 起始卡片ID
-  target: string;           // 目标卡片ID
-  type: 'default' | 'arrow'; // 连线类型
-}
-```
-
-### 3. 渐变色系配置（扩展）
-
-```typescript
-// src/lib/constants.ts
-export const NOTEBOOK_GRADIENTS = {
-  blue: { from: '#4E8CEB', to: '#64C7FF' },
-  purple: { from: '#8B5CF6', to: '#A855F7' },
-  pink: { from: '#EC4899', to: '#F472B6' },
-  orange: { from: '#F59E0B', to: '#FB923C' },
-  green: { from: '#10B981', to: '#34D399' },
-  teal: { from: '#14B8A6', to: '#2DD4BF' },
-  cyan: { from: '#06B6D4', to: '#22D3EE' },
-  indigo: { from: '#6366F1', to: '#818CF8' },
-  rose: { from: '#F43F5E', to: '#FB7185' },
-  amber: { from: '#F59E0B', to: '#FCD34D' },
-} as const;
-
-export type GradientKey = keyof typeof NOTEBOOK_GRADIENTS;
-```
-
-### 4. 主题系统实现
-
-```typescript
-// src/stores/useThemeStore.ts
-import { create } from 'zustand';
-import { persist } from 'zustand/middleware';
-
-interface ThemeStore {
-  theme: 'light' | 'dark';
-  toggleTheme: () => void;
-  setTheme: (theme: 'light' | 'dark') => void;
-}
-
-export const useThemeStore = create<ThemeStore>()(
-  persist(
-    (set) => ({
-      theme: 'light',
-      toggleTheme: () =>
-        set((state) => {
-          const newTheme = state.theme === 'light' ? 'dark' : 'light';
-          document.documentElement.classList.toggle('dark', newTheme === 'dark');
-          return { theme: newTheme };
-        }),
-      setTheme: (theme) => {
-        document.documentElement.classList.toggle('dark', theme === 'dark');
-        set({ theme });
-      },
-    }),
-    {
-      name: 'theme-storage',
-    }
-  )
+return (
+  <div onDoubleClick={handleDoubleClick}>
+    {isEditing ? (
+      <TiptapEditor 
+        content={card.content}
+        onSave={(content) => {
+          updateCard(card.id, { content });
+          setIsEditing(false);
+        }}
+      />
+    ) : (
+      <div dangerouslySetInnerHTML={{ __html: card.content }} />
+    )}
+  </div>
 );
 ```
 
-### 5. React Flow 配置
+## 预计时间安排
 
-```typescript
-// 画布默认配置
-const reactFlowProps = {
-  nodeTypes: { card: CardNode },
-  defaultViewport: { x: 0, y: 0, zoom: 1 },
-  minZoom: 0.25,
-  maxZoom: 2,
-  panOnScroll: true,
-  panOnDrag: canvasMode === 'pan',
-  selectNodesOnDrag: canvasMode === 'select',
-  connectionMode: ConnectionMode.Loose,
-  fitView: false,
-};
-```
+- **阶段一（画布编辑器优化）**：约 4-5 小时
+  - 卡片编辑器重构：1.5 小时
+  - 工具栏简化：1 小时
+  - 操作逻辑优化：1.5 小时
+  - 图标界面优化：0.5 小时
 
-### 6. 3D文件夹图标实现
+- **阶段二（笔记架功能完善）**：约 2-3 小时
+- **阶段三（卡片高级功能）**：约 2-3 小时
+- **阶段四（撤销/重做系统）**：约 3-4 小时
+- **阶段五（性能优化与细节打磨）**：约 2-3 小时
 
-```css
-/* theme.css */
-.folder-icon-3d {
-  position: relative;
-  width: 80%;
-  height: 70%;
-  display: flex;
-  align-items: flex-end;
-}
-
-.folder-body {
-  width: 100%;
-  height: 75%;
-  background: linear-gradient(135deg, #fbbf24 0%, #f59e0b 100%);
-  border-radius: 0 8px 8px 8px;
-  box-shadow: 0 4px 12px rgba(251, 191, 36, 0.3);
-  position: relative;
-  transition: all 0.3s ease;
-}
-
-.folder-tab {
-  position: absolute;
-  top: -12%;
-  left: 0;
-  width: 45%;
-  height: 20%;
-  background: linear-gradient(135deg, #fcd34d 0%, #fbbf24 100%);
-  border-radius: 8px 8px 0 0;
-}
-```
-
-## 风险与注意事项
-
-### 技术风险
-1. **React Flow 性能**：大量卡片时可能影响性能
-   - 解决：使用 React Flow 的性能优化配置（`nodesDraggable`、`nodesConnectable` 动态控制）
-   
-2. **IndexedDB 兼容性**：某些浏览器私密模式不支持
-   - 解决：添加降级方案（localStorage）
-
-3. **Tiptap 图片上传**：需要实现图片处理逻辑
-   - 解决：暂时使用 base64 存储（P0）
-
-### 开发注意事项
-1. **保持与原型图一致**：严格按照 `prototypes/` 中的视觉设计实现
-2. **渐进增强**：先实现 P0 功能，P1/P2 功能后续迭代
-3. **数据结构设计**：预留扩展字段，便于后续功能添加
-4. **命名规范**：
-   - 组件文件：PascalCase（`NoteCard.tsx`）
-   - Hook文件：camelCase（`useNotebooks.ts`）
-   - 常量文件：camelCase（`constants.ts`）
-
-### MVP 范围控制
-**本次实现（P0）：**
-- ✅ 登录页（伪登录）
-- ✅ 笔记架页面（网格展示、新建/删除）
-- ✅ 画布页面（卡片CRUD、连线、模式切换）
-- ✅ 主题切换
-- ✅ 本地存储
-
-**暂不实现（P1/P2）：**
-- ❌ 文件夹过滤功能
-- ❌ 搜索功能
-- ❌ 回收站
-- ❌ 撤销/重做
-- ❌ 卡片调整大小
-- ❌ 真实用户登录系统
-
-## 预计时间
-
-- **总计**：约 7-8 小时
-- **每日开发**：建议 2-3 小时/天，3-4 天完成
-
-## 后续任务
-
-完成此任务后，进入以下任务：
-1. **任务 2**：文件夹过滤与搜索功能（P1）
-2. **任务 3**：撤销/重做系统（P1）
-3. **任务 4**：卡片高级功能（复制、调整大小）（P1）
-4. **任务 5**：用户登录与数据同步（P2）
+**总计**：约 13-18 小时
 
 ---
 
-**备注**：本任务文档会随着开发进度实时更新 ✅
+**备注**：本文档记录项目初始化完成后的实际状态和后续开发计划。
